styles/spacing.css
@media only screen and (min-width: 810px) {
  .sidebar ul {
    padding: 1rem 0;
  }
  img {
    padding: 0 !important;
  }
  .main {
    padding: 2rem 0 2rem;
  }
  .header, h1, h2, h3, h4, h5, h6, p, pre, form {
    padding: 1rem 2rem !important;
  }
}

.header, h1, h2, h3, h4, h5, h6, pre, form {
  padding: 1rem;
}

.sidebar ul li:first-child {
  padding-top: 1rem;
}

.sidebar ul li:last-child {
  padding-bottom: 1rem;
}

li {
  padding: 0.5rem 3rem 0.5rem 2rem;
}

img {
  padding: 0 1rem;
}

.answer {
  padding: 0.5rem;
}

p {
  line-height: 1.6rem;
}

p+p {
  padding: 0 2rem 1rem !important;
}

